--- a/src/site/markdown/install-script.md.vm
+++ b/src/site/markdown/install-script.md.vm
@@ -186,6 +186,11 @@ broker.archive.path=/var/lib/aktin/broker-archive
 broker.uris=https://aktin-broker.klinikum.rwth-aachen.de/broker/
 broker.intervals=PT15M
 
+# file import data and script paths, interval to check script timeout
+import.data.path=/var/lib/aktin/import
+import.script.path=/var/lib/aktin/import-scripts
+import.script.check.interval=10800000
+
 # used in AKTIN to connect to the broker, you can get your API key from it-support@aktin.org
 broker.keys=XXXyourapikeyXXX
 db.datasource=java:jboss/datasources/AktinDS
