--- a/src/site/markdown/index.md.vm
+++ b/src/site/markdown/index.md.vm
@@ -1,21 +1,21 @@
 <h3><u>Installation und Update des AKTIN-Applikationsserver</u></h3>
-Diese Informationen richten sich an die System-Administratoren, die für die Einrichtung bzw. Wartung der Linux-Server in den Kliniken zuständig sind, auf denen das AKTIN-Data Warehouse läuft. Beschrieben wird das Vorgehen für eine Neuinstallation, verschiedene Varianten zum Update sowie optionale Konfigurationsschritte. Nach dem erfolgreichen Update oder Installation können Sie auf der Seite `http://<IHR SERVER>/aktin/admin/plain/test.html` die Funktionalität testen.
+Diese Informationen richten sich an die System-Administratoren, die für die Einrichtung bzw. Wartung des AKTIN-Data Warehouse zuständig sind. Auf diesen Seiten wird das Vorgehen für eine Neuinstallation, für das Update und andere optionale Konfigurationsschritte beschrieben.
 <br></br>
 
 <h4>Komplette Neuinstallation</h4>
-Für den Betrieb des AKTIN-Applikationsservers benötigen Sie eine funktionierende Installation eines auf Linux basierenden Server-Betriebsystems. Es wird empfohlen, das von uns geteste Ubuntu Server 20.04 LTS einzusetzen. Bitte beachten Sie auch die Seite [Server-Installation](install-requirements.html). Dort werden die verschiedenen Schritte für eine Neuinstallation beschrieben.
+Für den Betrieb des AKTIN-Applikationsservers benötigen Sie eine funktionierende Installation eines auf Linux basierenden Server-Betriebsystems. Es wird empfohlen, das von uns geteste Ubuntu Server 20.04 LTS einzusetzen. Bitte beachten Sie die Seite [Server-Installation](install-requirements.html) für eine schrittweise Durchführung einer erstmaligen Installation.
 <br></br>
 
 <h4>Neuinstallation des AKTIN-Applikationsservers</h4>
-Besteht bereits ein laufender Server oder wurde das Server-Betriebssystem neu installiert, so müssen Sie die Installation des AKTIN-Applikationsservers vornehmen. Eine Anleitung für die Verwendung des automatischen Installationsskriptes finden Sie auf der Seite [Installationsskript](install-script.html). Sie erhalten mit einer Neuinstallation automatisch den aktuellesten Stand von Version ${project.version}. Somit ist im Anschluss kein Update oder Patch mehr notwendig.
+Besteht bereits ein laufender Server oder wurde das Server-Betriebssystem neu installiert, müssen Sie die Installation des AKTIN-Applikationsservers vornehmen. Eine Anleitung für die Verwendung des automatischen Installationsskriptes finden Sie auf der Seite [Installationsskript](install-script.html). Sie erhalten mit einer Neuinstallation automatisch den aktuellesten Stand von Version ${project.version}.
 <br></br>
 
 <h4>Automatisches Update für Ubuntu</h4>
-Falls Sie einen Ubuntu-Server nutzen, der anhand der Anleitung eingerichtet wurde, sollte das Update-Skript bei Ihnen funktionieren. Für einen Update auf Version ${project.version} folgen Sie der Anleitung zum [skriptbasierten Update](update-auto.html). Diese Skript kann nach manueller Anpassung auch bei RedHat-Servern benutzt werden.
+Für das Update eines vorhandenen AKTIN-Data Warehouse auf Version ${project.version}, folgen Sie der Anleitung zum [skriptbasierten Update](update-auto.html). Dieses Skript ist für Systeme mit Ubuntu vorgesehen, kann nach manueller Anpassung aber auch bei anderen Linux-Distributionen genutzt werden.
 <br></br>
 
 <h4>Manuelles Update für Ubuntu oder andere Betriebssysteme</h4>
-Bei individuell konfigurierten Servern oder anderen Linux-Distributionen führen Sie die einzelnen Schritte des Skriptes manuell durch und passen gegebenenfalls die Pfade oder andere Besonderheiten entsprechend an. Bitte folgen Sie dabei der Anleitung zum [manuellen Update](update-manual.html)
+Bei individuell konfigurierten Servern oder anderen Linux-Distributionen führen Sie die einzelnen Schritte des Skriptes manuell durch und passen Sie gegebenenfalls die Pfade oder andere Besonderheiten entsprechend an. Bitte folgen Sie dabei der Anleitung zum [manuellen Update](update-manual.html)
 <br></br>
 
 <h4>Software-Pakete</h4>
